--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Videos App",
-  "name": "Art Videos for Fun and Learning",
+  "name": "Videos App",
   "icons": [
     {
       "src": "index.webp",
